
03-March-2012 Jean-Marie Simonet
 # [#28181] *Notice in weblinks module
 # [#28179] JText values in js of quick icons force to escape single quotes. Thanks Patrick.
 $ [#27536] mod_articles_category ordering. Thanks Brian.
 # [#28158] Fix for override manager regarding plugins. Thanks Patrick.
 # [#23021] Notice message in banners model. Thanks Adrien.

02-March-2012 Jean-Marie Simonet
 # [#25423] $message not initialized in ~/components/com_users/controllers/reset.php. Thanks Christophe.
 # [#28162] Creating menu items saves selection when it shouldn't. Thanks Jeremy
 $ [#28157] Inconsistent Language Constants in the Beez_20 Language Files. Thanks Mig
 # [#28150] ContentBuildRoute does not remove layout if link attached to menu item. Thanks Ryan.
 # [#27477] languagefilter: build rule is deleting "option" param. Thanks Christophe.
 # [#27863] JHtmlGrid::sort broken. Thanks Ofer
 # [#26906] Zip Archive native unpack wrong result. Thanks Pavel

28-Feb-2012 Jean-Marie Simonet
 # [#28145] Add uninstall support for possibly installed media files. Thanks Sven

27-Feb-2012 Jean-Marie Simonet
 # [#28133] JMail addAttachment ignores parameters (filename, encoding, type).Thanks Holger.
 # [#28140] *JText values in js beez templates force to escape single quotes
 # [#28117] *Hathor forgotten in #28072
 # [#28134] Typo in com_content view. Thanks Ofer.
 # [#28132] Typo in joomla-cms / installation / models / configuration.php. Thanks Vladimir and Michael
 # [#28114] missing css .icon-32-print class in bluestork template (and Hathor). Thanks Javier and Michael
 # [#27706] JAccess::getGroupsByUser doesn't work as expected in case of guest user. Thanks Patrick
 
24-Feb-2012 Christophe Demko
 # [#28118] Notice 'Only variable references should be returned by reference' (Piotr Konieczny)
 # [#28115] *PHP 5.3.8 Notice for some language packs with iconv
 # [#28122] Fix installation for Joomla 3.0 (Rouven Weßling)