@@ -6,6 +6,8 @@
 COM_WRAPPER="Wrapper"
 COM_WRAPPER_FIELD_ADD_DESC="By default, http:// will be added unless it detects http:// or https:// in the URL you provide. This allows you to switch off this functionality."
 COM_WRAPPER_FIELD_ADD_LABEL="Auto add"
+COM_WRAPPER_FIELD_FRAME_DESC="Show frame border which wrap the the iframe"
+COM_WRAPPER_FIELD_FRAME_LABEL="Frame border"
 COM_WRAPPER_FIELD_HEIGHT_DESC="Height of the IFrame window in pixels"
 COM_WRAPPER_FIELD_HEIGHT_LABEL="Height"
 COM_WRAPPER_FIELD_HEIGHTAUTO_DESC="If height is set to auto, the height will automatically be set to the size of the external page. This will only work for pages on your own domain. If you see a JavaScript error, make sure this parameter is disabled. This will break XHTML compatibility for this page."
